src/test/ui/parser/expr-as-stmt.stderr
error: expected expression, found `+`
  --> $DIR/expr-as-stmt.rs:7:9
   |
LL |     {2} + {2}
   |     --- ^ expected expression
   |     |
   |     help: parentheses are required to parse this as an expression: `({2})`

error: expected expression, found `+`
  --> $DIR/expr-as-stmt.rs:11:9
   |
LL |     {2} + 2
   |     --- ^ expected expression
   |     |
   |     help: parentheses are required to parse this as an expression: `({2})`

error: expected expression, found `+`
  --> $DIR/expr-as-stmt.rs:16:12
   |
LL |     { 42 } + foo;
   |     ------ ^ expected expression
   |     |
   |     help: parentheses are required to parse this as an expression: `({ 42 })`

error: expected expression, found `&&`
  --> $DIR/expr-as-stmt.rs:26:5
   |
LL |     if let Some(x) = a { true } else { false }
   |     ------------------------------------------ help: parentheses are required to parse this as an expression: `(if let Some(x) = a { true } else { false })`
LL |     &&
   |     ^^ expected expression

error: expected expression, found `>`
  --> $DIR/expr-as-stmt.rs:33:7
   |
LL |     } > 0
   |       ^ expected expression
help: parentheses are required to parse this as an expression
   |
LL |     (match x {
LL |         _ => 1,
LL |     }) > 0
   |

error[E0614]: type `{integer}` cannot be dereferenced
  --> $DIR/expr-as-stmt.rs:21:11
   |
LL |     { 3 } * 3
   |     ----- ^^^
   |     |
   |     help: parentheses are required to parse this as an expression: `({ 3 })`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0614`.
